Verbesserungen nach Sonarqube, weitere Tests aktivieren