@@ -4,9 +4,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
@@ -29,6 +28,8 @@ import aero.minova.rcp.model.ValueSerializer;
 class GsonTest {
 
 	private Table t;
+
+	private Path path = Path.of("resources", "work", "examplejson.json");
 
 	@BeforeEach
 	public void setup() {
@@ -79,18 +80,10 @@ class GsonTest {
 		assertNotNull(t);
 	}
 
-//	@Test
-	void blabla() {
+	@Test
+	void readExample() throws Exception {
 
-		String s = null;
-		String userDir = System.getProperty("user.home");
-		String p = userDir + "/git/aero.minova.rcp/tests/aero.minova.rcp.xml.tests/src/aero/minova/rcp/xml/tests/examplejson.json";
-		try {
-			s = new String(Files.readAllBytes(Paths.get(p)));
-		} catch (IOException e) {
-			// Weiter
-		}
-
+		String content = Files.readString(path);
 		Gson gson = new Gson();
 		gson = new GsonBuilder() //
 				.registerTypeAdapter(Value.class, new ValueSerializer()) //
@@ -98,7 +91,7 @@ class GsonTest {
 				.setPrettyPrinting() //
 				.create();
 
-		SqlProcedureResult sql = gson.fromJson(s, SqlProcedureResult.class);
+		SqlProcedureResult sql = gson.fromJson(content, SqlProcedureResult.class);
 		assertNotNull(sql.getOutputParameters().getRows());
 	}
 
